# bigbox_scraper

./: .gitignore  README.md  pyproject.toml  scrapy.cfg
bigbox/: items.py  middlewares.py  pipelines.py  settings.py
bigbox/spiders/: experiences.py
