[tool.poetry]
name = "bigbox-scraper"
version = "0.1.0"
description = ""
authors = ["Rodrigo López Dato <rolodato@rolodato.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.1"
scrapy-playwright = "^0.0.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
