[tool.poetry]
name = "bigbox-scraper"
version = "0.1.0"
description = ""
authors = ["Rodrigo López Dato <rolodato@rolodato.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "^2.11.1"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
